hard-gists/944049/run.log
=== Docker Run Log for 944049 ===
Started at: Mi 29. Okt 18:25:12 CET 2025

[2025-10-29 18:25:13] START: Running container for 944049
[2025-10-29 18:25:13] SUCCESS: Container 8caaa95a393611601cdda0bae0f1dae3922b3a0b7a0514c4fa04f5237efaebd5 started for 944049
=== Container logs for 944049 ===
  File "/snippet.py", line 65
    print 'Creating %s grid'%gridname
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 944049 ===
[2025-10-29 18:25:15] INFO: Container 8caaa95a393611601cdda0bae0f1dae3922b3a0b7a0514c4fa04f5237efaebd5 has stopped
